k8s/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: server-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-backend
  template:
    metadata:
      labels:
        app: server-backend
    spec:
      containers:
        - name: server-backend
          image: mooaz/greenminds-server:v1
          ports:
            - containerPort: 3001
