k8s/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-backend-service
spec:
  selector:
    app: server-backend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP
