k8s/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: server-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-backend
  template:
    metadata:
      labels:
        app: server-backend
    spec:
      containers:
        - name: server-backend
          image: mooaz/greenminds-backend:v1
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: server-backend-service
spec:
  type: NodePort
  selector:
    app: server-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 31100 # Optional: Kubernetes will choose a random port if not specified
