k8s/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-client-service
spec:
  selector:
    app: client-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer # To expose to the public internet
