k8s/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-frontend
  template:
    metadata:
      labels:
        app: client-frontend
    spec:
      containers:
        - name: client-frontend
          image: mooaz/greenminds-client:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-client-service
spec:
  selector:
    app: client-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer # To expose to the public internet
