k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: greenminds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-backend-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-client-service
            port:
              number: 80
